test-cafe/cafe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ringo
  namespace: cafe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ringo
  template:
    metadata:
      labels:
        app: ringo
    spec:
      containers:
      - name: ringo
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ringo-svc
  namespace: cafe
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ringo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ichigo
  namespace: cafe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ichigo 
  template:
    metadata:
      labels:
        app: ichigo 
    spec:
      containers:
      - name: ichigo 
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ichigo-svc
  namespace: cafe
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ichigo
